--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>SASANK</title>
 	<style>
 		* {
 			margin: 0;
@@ -39,6 +39,10 @@
 			animation: change 5s linear infinite;
 		}
 
+		section h1:nth-child(odd) {
+			z-index: 2;
+		}
+
 		@keyframes change {
 			0% {
 				filter: hue-rotate(0deg);
@@ -52,30 +56,31 @@
 </head>
 
 <body>
-	<section id="scene">
-		<h1 data-depth="6.2">p</h1>
-		<h1 data-depth="-0.6">e</h1>
-		<h1 data-depth="0.4">r</h1>
-		<h1 data-depth="1.6">u</h1>
-		<h1 data-depth="-0.7">m</h1>
-		<h1 data-depth="1.2">a</h1>
-		<h1 data-depth="-0.3">l</h1>
-		<h1 data-depth="1.3">l</h1>
-		<h1 data-depth="-0.5">a</h1>
-		<h1 data-depth="0.2">s</h1>
-		<h1 data-depth="-0.6">a</h1>
+	<section id="particles-js">
+		<h1 data-depth="3.2">p</h1>
+		<h1 data-depth="-2.6">e</h1>
+		<h1 data-depth="1.4">r</h1>
+		<h1 data-depth="0.6">u</h1>
+		<h1 data-depth="-3.7">m</h1>
+		<h1 data-depth="2.2">a</h1>
+		<h1 data-depth="-1.3">l</h1>
+		<h1 data-depth="0.3">l</h1>
+		<h1 data-depth="-3.5">a</h1>
+		<h1 data-depth="2.2">s</h1>
+		<h1 data-depth="-1.6">a</h1>
 		<h1 data-depth="-0.2">s</h1>
-		<h1 data-depth="0.6">a</h1>
-		<h1 data-depth="1.6">n</h1>
+		<h1 data-depth="3.6">a</h1>
+		<h1 data-depth="2.6">n</h1>
 		<h1 data-depth="-1.2">k</h1>
 	</section>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+	<script src="app.js"></script>
 	<script>
-		var scene = document.getElementById('scene');
+		var scene = document.getElementById('particles-js');
 		var parallaxInstance = new Parallax(scene);
 	</script>
-
 </body>
 
 </html>
