--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SASANK</title>
 	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Poppins:display=swap');
+
 		* {
 			margin: 0;
 			padding: 0;
 			box-sizing: border-box;
 			overflow: hidden;
+			font-family: 'Poppins', sans-serif;
 		}
 
 		body {
@@ -19,7 +22,7 @@
 			min-height: 100vh;
 		}
 
-		section {
+		.div {
 			background: #ff7675;
 			position: relative;
 			display: flex;
@@ -28,19 +31,7 @@
 			height: 100vh;
 			width: 100%;
 			animation: change 5s linear infinite;
-		}
-
-		section h1 {
-			color: #d63031;
-			position: relative !important;
-			font-size: 10vw;
-			letter-spacing: 5px;
-			text-transform: uppercase;
-			animation: change 5s linear infinite;
-		}
-
-		section h1:nth-child(odd) {
-			z-index: 2;
+			z-index: 1;
 		}
 
 		@keyframes change {
@@ -52,35 +43,55 @@
 				filter: hue-rotate(360deg);
 			}
 		}
+
+		.form {
+			position: fixed;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			z-index: 10;
+			background: #2980b9;
+			padding: 20px;
+			border-radius: 20px;
+			width: 300px;
+		}
+
+		.form h2 {
+			font-size: 30px;
+			text-align: center;
+		}
+
+		.form input {
+			width: 100%;
+			padding: 12px 20px;
+			margin: 8px 0;
+			display: inline-block;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+		}
+
+		.form button {
+			width: 100%;
+			background-color: #3498db;
+			color: white;
+			padding: 14px 20px;
+			margin: 8px 0;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+		}
 	</style>
 </head>
 
 <body>
-	<section id="particles-js">
-		<h1 data-depth="3.2">p</h1>
-		<h1 data-depth="-2.6">e</h1>
-		<h1 data-depth="1.4">r</h1>
-		<h1 data-depth="0.6">u</h1>
-		<h1 data-depth="-3.7">m</h1>
-		<h1 data-depth="2.2">a</h1>
-		<h1 data-depth="-1.3">l</h1>
-		<h1 data-depth="0.3">l</h1>
-		<h1 data-depth="-3.5">a</h1>
-		<h1 data-depth="2.2">s</h1>
-		<h1 data-depth="-1.6">a</h1>
-		<h1 data-depth="-0.2">s</h1>
-		<h1 data-depth="3.6">a</h1>
-		<h1 data-depth="2.6">n</h1>
-		<h1 data-depth="-1.2">k</h1>
-	</section>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+	<div class="div" id="particles-js"></div>
+	<form class="form" action="/fun.html" method="get">
+		<h2>Your Name</h2><br>
+		<input type="text" name="name" required><br>
+		<button type="submit">SUBMIT</button>
+	</form>
 	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 	<script src="app.js"></script>
-	<script>
-		var scene = document.getElementById('particles-js');
-		var parallaxInstance = new Parallax(scene);
-	</script>
 </body>
 
 </html>
