--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 <body>
 	<div class="div" id="particles-js"></div>
-	<form class="form" action="/fun.html" method="get">
+	<form class="form" action="fun.html" method="get">
 		<h2>Your Name</h2><br>
 		<input type="text" name="name" required><br>
 		<button type="submit">SUBMIT</button>
