--- a/fun.html
+++ b/fun.html
@@ -93,7 +93,7 @@
 	<div class="complete">
 		<div class="play">
 			<h1>wanna play again</h1><br>
-			<a href="/">play again</a>
+			<a href="index.html">play again</a>
 		</div>
 	</div>
 
